# gufo

./: .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cerno/: __init__.py
cerno/core/: canvas.py  chart.py  layer.py  validate.py
cerno/data/: adapter.py  inference.py  transform.py
cerno/layout/: __init__.py  facet.py  grid.py  jointplot.py
cerno/marks/: __init__.py  _base.py  area.py  bar.py  boxplot.py  countplot.py  heatmap.py  histogram.py  kde.py  line.py  pointplot.py  rug.py  scatter.py  violin.py
cerno/stats/: __init__.py  kde.py  lowess.py  regression.py
cerno/style/: __init__.py  color.py  theme.py
docs/: architecture.md  changelog.md  conf.py  gallery.md  getting-started.md  index.md
docs/_scripts/: generate_gallery.py
docs/api/: chart.md  data.md  index.md  layout.md  stats.md  theme.md
docs/chart-types/: area.md  bar.md  boxplot.md  countplot.md  ecdf.md  heatmap.md  histogram.md  index.md  kde.md  line.md  pairplot.md  pointplot.md  regression.md  rug.md  scatter.md  strip.md  swarm.md  violin.md
docs/guides/: data-formats.md  layout.md  matplotlib-escape-hatch.md  pairplot.md  theming.md
gufo/: __init__.py
gufo/core/: __init__.py  chart.py  layer.py  validate.py
gufo/data/: __init__.py  adapter.py  inference.py
gufo/layout/: facet.py  grid.py  jointplot.py  pairplot.py
gufo/marks/: _base.py  area.py  bar.py  boxplot.py  countplot.py  ecdf.py  heatmap.py  histogram.py  kde.py  line.py  pointplot.py  rug.py  scatter.py  strip.py  swarm.py  violin.py
gufo/stats/: __init__.py  kde.py  lowess.py  regression.py
gufo/style/: color.py  theme.py
neptune/: __init__.py  core.py  style.py
tests/: conftest.py  test_core.py  test_data.py  test_facet.py  test_layout.py  test_marks.py  test_pairplot.py  test_stats.py  test_style.py  test_validation.py
