[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerno"
version = "0.1.0"
description = "A modern, Pythonic data visualization library aimed at usability and aesthetics."
authors = [
  { name = "Thomas", email = "thomas@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]

[project.urls]
"Homepage" = "https://github.com/thomas/cerno"
