[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerno"
version = "0.1.0"
description = "A modern, Pythonic data visualization library aimed at usability and aesthetics."
authors = [
  { name = "Thomas", email = "thomas@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
polars = ["polars>=0.20.0"]
scipy = ["scipy>=1.7.0"]
all = ["cerno[pandas,polars,scipy]"]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.23",
    "sphinx-copybutton>=0.5",
]

[project.urls]
"Homepage" = "https://github.com/thomas/cerno"
"Documentation" = "https://cerno.readthedocs.io"
