[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerno"
dynamic = ["version"]
description = "A modern, Pythonic data visualization library aimed at usability and aesthetics."
authors = [
  { name = "Thomas Vetere", email = "tomvetere@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["visualization", "plotting", "matplotlib", "charts", "dataviz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
polars = ["polars>=0.20.0"]
scipy = ["scipy>=1.7.0"]
stats = ["statsmodels>=0.13.0"]
all = ["cerno[pandas,polars,scipy,stats]"]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.23",
    "sphinx-copybutton>=0.5",
]

[project.urls]
"Homepage" = "https://github.com/tomvetere/cerno"
"Repository" = "https://github.com/tomvetere/cerno"
"Issues" = "https://github.com/tomvetere/cerno/issues"
"Documentation" = "https://cerno.readthedocs.io"

[tool.setuptools.dynamic]
version = { attr = "cerno._version.__version__" }

[tool.setuptools.packages.find]
include = ["cerno*"]
